RESOLVED FIXED97614
AX: AccessibilityUIElementChromium.cpp won't build on Windows without wtf/StringExtras.h
https://bugs.webkit.org/show_bug.cgi?id=97614
Summary AX: AccessibilityUIElementChromium.cpp won't build on Windows without wtf/Str...
Dominic Mazzoni
Reported 2012-09-25 15:49:05 PDT
AccessibilityUIElementChromium.cpp calls snprintf as of r129527 - this is fine, but it won't build on Windows without wtf/StringExtras.h because the MS VC++ compiler doesn't have snprintf built-in.
Attachments
Patch (1.35 KB, patch)
2012-09-25 15:53 PDT, Dominic Mazzoni
no flags
Dominic Mazzoni
Comment 1 2012-09-25 15:53:36 PDT
WebKit Review Bot
Comment 2 2012-09-25 16:01:15 PDT
Comment on attachment 165693 [details] Patch Rejecting attachment 165693 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: it/webkit-commit-queue Parsed 2 diffs from patch file(s). patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp Hunk #1 FAILED at 37. 1 out of 1 hunk FAILED -- saving rejects to file Tools/DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/14033203
Alec Flett
Comment 3 2012-09-25 16:01:59 PDT
Comment on attachment 165693 [details] Patch I landed this when I realized the commit-queue would take too long.
Alec Flett
Comment 4 2012-09-25 16:02:17 PDT
Note You need to log in before you can comment on or make changes to this bug.