AX: AccessibilityUIElementChromium.cpp won't build on Windows without wtf/StringExtras.h https://bugs.webkit.org/show_bug.cgi?id=97614

Unreviewed, fixing windows breakage.

Added wtf/StringExtras.h to the includes to fix the Chromium/Windows build.

Patch by Dominic Mazzoni <dmazzoni@google.com> on 2012-09-25

* DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@129568 bbb929c8-8fbe-4397-9dbb-9b2b20218538